[tool.poetry]
name = "deliveryservice"
version = "0.1.0"
description = ""
authors = ["Anna <anna.dvoskina@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
jupyter = "^1.0.0"
pandas = "^1.3.4"
numpy = "^1.21.4"
statsmodels = "^0.13.1"
sklearn = "^0.0"
patsy = "^0.5.2"
dowhy = "^0.6"
ipython = "^7.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
